# neo-builder

./: .dockerignore  .env  .gitignore  .prettierrc  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
neo_builder/conf/: graph-builder.yaml
neo_builder/db/: __init__.py  neo4j_connector.py
neo_builder/graphs/ml_small/nodes/: __init__.py  genre.py  movie.py
neo_builder/graphs/ml_small/rels/: __init__.py  movie_genre.py
notebooks/01-graph-builder/: 01-create-ml-graph.ipynb
